fix row overflow on scroll

--- a/src/Pages/PlayerList.css
+++ b/src/Pages/PlayerList.css
@@ -59,7 +59,7 @@
     text-align: center;
 }
 
-.PlayerList div[role="table"] > *:first-child {
+.PlayerList div[role="table"] .THead__wrapper > *:first-child {
     border-radius: .5rem .5rem 0 0;
     overflow: hidden;
 }
@@ -80,10 +80,17 @@
     padding: 0.75rem;
 }
 
+.THead__wrapper {
+	position: sticky;
+	top: 96px;
+	z-index: 10;
+	background-color: #121212;
+	width: 100%;
+	height: 100%;
+}
+
 .THead {
-    position: sticky;
-    top: 96px;
-    z-index: 10;
+    position: relative;
     color: black;
     font-size: 1.2rem;
     font-weight: bold;
